z-index bug on community header, content should scroll under

--- a/src/app/components/community/community-header/community-header.component.scss
+++ b/src/app/components/community/community-header/community-header.component.scss
@@ -1,6 +1,5 @@
 
-.header-wrapper {
-  height: var(--wma-community-header-height);
+#header-wrapper {
   margin: 0;
   padding: 0;
   border-width: 0;
@@ -8,12 +7,12 @@
   z-index: 10;
 }
 
+.header-wrapper {
+  height: var(--wma-community-header-height);
+}
+
 .header-wrapper-no-picture {
   height: var(--wma-community-header-info-height);
-  margin: 0;
-  padding: 0;
-  border-width: 0;
-  position: absolute;
 }
 
 #community-banner {
